| Bug #8248 | QUOTE() returns bad results | ||
|---|---|---|---|
| Submitted: | 2 Feb 2005 0:30 | Modified: | 3 Feb 2005 6:39 |
| Reporter: | Dean Ellis | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 4.0.24 | OS: | |
| Assigned to: | Jim Winstead | Target Version: | |
[2 Feb 2005 18:45]
Jim Winstead
Pushed to 4.0.
[3 Feb 2005 6:39]
Paul DuBois
Mentioned in 4.0.24 change notes.

Description: QUOTE() returns bad results. How to repeat: DROP TABLE IF EXISTS t1; CREATE TABLE t1 SELECT 1 UNION SELECT 2 UNION SELECT 3; SELECT QUOTE('A') FROM t1; +-----------------+ | QUOTE('A') | +-----------------+ | 'A' | | '\'A\'' | | '\'\\\'A\\\'\'' | +-----------------+ Suggested fix: n/a