sql/item_strfunc.cc
@@ -2183,18 +2183,13 @@ String *Item_func_quote::val_str(String *str)
   for (from= (char*) arg->ptr(), end= from + arg_length; from < end; from++)
     new_length+= get_esc_bit(escmask, (uchar) *from);
 
-  /*
-    We have to use realloc() instead of alloc() as we want to keep the
-    old result in arg
-  */
-  if (arg->realloc(new_length))
+  if (tmp_value.alloc(new_length))
     goto null;
 
   /*
-    As 'arg' and 'str' may be the same string, we must replace characters
-    from the end to the beginning
+    We replace characters from the end to the beginning
   */
-  to= (char*) arg->ptr() + new_length - 1;
+  to= (char*) tmp_value.ptr() + new_length - 1;
   *to--= '\'';
   for (start= (char*) arg->ptr(),end= start + arg_length; end-- != start; to--)
   {
@@ -2222,9 +2217,9 @@ String *Item_func_quote::val_str(String *str)
     }
   }
   *to= '\'';
-  arg->length(new_length);
+  tmp_value.length(new_length);
   null_value= 0;
-  return arg;
+  return &tmp_value;
 
 null:
   null_value= 1;
